# aix

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run_tests.sh  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml  main.yml  tests.yml
_modules/: index.html
_modules/aix/: audio.html  batches.html  chat.html  config.html  contexts.html  credentials.html  embeddings.html  gen_ai.html  image.html  misc.html  models.html  prompts.html  stores.html  video.html  vision.html
_modules/aix/ai_models/: base.html  examples.html  manager.html  sources.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: aix.rst.txt
_sources/module_docs/aix/: ai_models.rst.txt  audio.rst.txt  batches.rst.txt  chat.rst.txt  config.rst.txt  contexts.rst.txt  credentials.rst.txt  embeddings.rst.txt  gen_ai.rst.txt  image.rst.txt  misc.rst.txt  models.rst.txt  np.rst.txt  pd.rst.txt  prompts.rst.txt  sk.rst.txt  stores.rst.txt  util.rst.txt  video.rst.txt  vision.rst.txt
_sources/module_docs/aix/ai_models/: base.rst.txt  examples.rst.txt  manager.rst.txt  sources.rst.txt
_sources/module_docs/aix/gen_ai/: google_genai.rst.txt  openai_genai.rst.txt
aix/: __init__.py  audio.py  batches.py  chat.py  config.py  contexts.py  credentials.py  embeddings.py  image.py  misc.py  models.py  np.py  pd.py  prompts.py  sk.py  stores.py  util.py  video.py  vision.py
aix/ai_models/: README.md  __init__.py  base.py  examples.py  manager.py  sources.py
aix/gen_ai/: __init__.py  google_genai.py  openai_genai.py
docsrc/: index.rst
examples/: 01_simple_chat.py  02_stateful_chat.py  03_embeddings.py  04_prompt_functions.py  05_batch_operations.py  06_model_discovery.py  07_image_generation.py  08_audio_operations.py  09_multimodal_workflow.py  README.md
misc/: aix - polling constrained AI answers.ipynb  aix_contexts_wip.ipynb  aix_demo.ipynb  aix_demo.md  aix_wip.ipynb  constrained_answer_summary.md  store_aggregate_02.md  store_aggregate_03.md  store_aggregate_04.md  store_aggregate_05.md
misc/docs/: aix_resources_summary.md  implementation.md
module_docs/: aix.html
module_docs/aix/: ai_models.html  audio.html  batches.html  chat.html  config.html  contexts.html  credentials.html  embeddings.html  gen_ai.html  image.html  misc.html  models.html  np.html  pd.html  prompts.html  sk.html  stores.html  util.html  video.html  vision.html
module_docs/aix/ai_models/: base.html  examples.html  manager.html  sources.html
module_docs/aix/gen_ai/: google_genai.html  openai_genai.html
tests/: conftest.py  test_audio.py  test_chat.py  test_compare_images.py  test_config.py  test_credentials.py  test_embeddings.py  test_image.py  test_models.py  test_prompts.py  test_video.py  test_vision.py
