[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aix"
version = "0.0.31"
description = "Artificial Intelligence eXtensions"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Thor Whalen" }]
# aix is a headless facade -- it keeps hard dependencies to a minimum.
# `litellm` is the provider backend (imported lazily, only when a call is made);
# `config2py` reads API keys / config. Everything else lives in the extras below
# and is imported lazily, with a clear install hint when missing.
dependencies = [
    "litellm>=1.0.0",
    "config2py",
    # TOML parsing for the user config file (aix.config). `tomllib` is stdlib on
    # 3.11+; `tomli` is the tiny backport for 3.10.
    "tomli; python_version < '3.11'",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/thorwhalen/aix"

[project.optional-dependencies]
# Provider SDKs used by the legacy aix.gen_ai backends
google = ["google-generativeai", "i2"]
openai = ["oa"]
# Model discovery from OpenRouter / Ollama / provider APIs (aix.ai_models.sources)
discovery = ["requests"]
# Media generation helpers (aix.image / aix.video)
image = ["pillow", "requests"]
video = ["diffusers", "torch", "requests"]
# Misc utilities
tables = ["tabled"]              # aix.misc.get_llm_leaderboards
hub = ["huggingface_hub"]        # aix.ai_models.examples
# Everything above, for "give me all the optional backends"
all = [
    "google-generativeai",
    "i2",
    "oa",
    "requests",
    "pillow",
    "tabled",
    "huggingface_hub",
]
testing = ["pytest", "hypothesis"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = ["D100"]
ignore = ["D203", "E501", "B905"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]
"**/examples/*" = ["D"]
"**/scrap/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.wads.ci.env]
# OPENAI_API_KEY: aix modules read this via config2py at import time.
# wads-migrate wires this from secrets into the workflow-level env: block.
test_envvars = ["OPENAI_API_KEY"]
