[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aix"
version = "0.0.38"
description = "Artificial Intelligence eXtensions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "ai",
    "llm",
    "openai",
    "anthropic",
    "litellm",
    "embeddings",
    "prompt-engineering",
    "multi-provider",
]
authors = [{ name = "Thor Whalen" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# aix is a headless facade -- it keeps hard dependencies to a minimum.
# `litellm` is the provider backend (imported lazily, only when a call is made);
# `config2py` reads API keys / config. Everything else lives in the extras below
# and is imported lazily, with a clear install hint when missing.
dependencies = [
    "litellm>=1.0.0",
    "config2py",
    # TOML parsing for the user config file (aix.config). `tomllib` is stdlib on
    # 3.11+; `tomli` is the tiny backport for 3.10.
    "tomli; python_version < '3.11'",
]

[project.urls]
Documentation = "https://thorwhalen.github.io/aix/"
Homepage = "https://github.com/thorwhalen/aix"
Repository = "https://github.com/thorwhalen/aix"
Issues = "https://github.com/thorwhalen/aix/issues"
Changelog = "https://github.com/thorwhalen/aix/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# Provider SDKs used by the legacy aix.gen_ai backends
google = ["google-generativeai", "i2"]
openai = ["oa"]
# Model discovery from OpenRouter / Ollama / provider APIs (aix.ai_models.sources)
discovery = ["requests"]
# Media generation helpers (aix.image / aix.video)
image = ["pillow", "requests"]
video = ["diffusers", "torch", "requests"]
# Misc utilities
tables = ["tabled"]              # aix.misc.get_llm_leaderboards
hub = ["huggingface_hub"]        # aix.ai_models.examples
# Multi-engine transcription via scribed (aix.transcribe(audio, engine=...))
scribed = ["scribed"]
# Everything above, for "give me all the optional backends"
all = [
    "google-generativeai",
    "i2",
    "oa",
    "requests",
    "pillow",
    "tabled",
    "huggingface_hub",
    "scribed",
]
testing = ["pytest", "hypothesis"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = ["D100"]
ignore = ["D203", "E501", "B905"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]
"**/examples/*" = ["D"]
"**/scrap/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.wads.ci.env]
# OPENAI_API_KEY: aix modules read this via config2py at import time.
# wads-migrate wires this from secrets into the workflow-level env: block.
test_envvars = ["OPENAI_API_KEY"]
