[metadata]
name = aix
version = 0.0.15
url = https://github.com/thorwhalen/aix
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Artificial Intelligence eXtensions
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = aix

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    guide
	config2py
	google
	i2
	numpy
	oa
	pandas
	scikit-learn
	tabled
	requests

